Do not allow scrolling past input

--- a/frontend/src/styles/App.css
+++ b/frontend/src/styles/App.css
@@ -1,7 +1,15 @@
 .game {
+  height: 100vh;
+}
+
+.display {
   display: flex;
   justify-content: space-around;
-  height: 100vh;
+  height: calc(100% - 50px);
+}
+
+.input {
+  height: 50px;
 }
 
 .feed, .navigator, .stats  {
