Add panel headings

--- a/frontend/src/styles/App.css
+++ b/frontend/src/styles/App.css
@@ -15,6 +15,12 @@
 .feed, .navigator, .stats  {
   border: 1px solid black;
   width: 100%;
+  padding: 0 10px;
+}
+
+.feed h3, .navigator h3, .stats h3 {
+  margin-top: 0.5em;
+  margin-bottom: 0.5em;
   text-align: center;
 }
 
